[project]
name = "ann-price-calc"
version = "0.1.0"
description = ""
authors = [{name = "Villa Straylight", email = "villa.straylite@proton.me"}]
license = "MIT"
readme = "README.md"

[project.scripts]
run-ann-model-01 = "ann_price_calc.ann_model_01.run_bs_ann_sampledata:main"
run-ann-model-02 = "ann_price_calc.ann_model_02.run_model:main"
run-ann-model-03 = "ann_price_calc.correlation.run_model:main"
